# SlicerCIP

./: CMakeLists.txt  LICENSE  README.md
LesionSizing/: CMakeLists.txt
LesionSizing/LesionSegmentation/: CMakeLists.txt  LesionSegmentation.cxx  LesionSegmentation.xml
LesionSizing/LesionSegmentation/Testing/: CMakeLists.txt
